# intellidocs

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/src/: cli.py  config.py  main.py
backend/src/api/: deps.py
backend/src/api/routes/: chat.py  documents.py  health.py
backend/src/embeddings/: embedder.py
backend/src/generation/: llm_client.py  prompts.py  rag_chain.py
backend/src/ingestion/: chunker.py  loader.py  processor.py
backend/src/retrieval/: reranker.py  retriever.py
backend/src/vectorstore/: __init__.py  base.py  chroma_store.py  qdrant_store.py
backend/tests/: test_config.py  test_embeddings.py  test_generation.py  test_ingestion.py  test_integration.py  test_retrieval.py  test_vectorstore.py
data/sample_docs/: README.md  machine_learning_basics.md  python_overview.txt  world_cities.csv
docs/: architecture.md
docs/plans/: 2026-02-25-intellidocs-design.md  2026-02-25-intellidocs-implementation.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/Chat/: ChatWindow.tsx  InputBar.tsx  MessageBubble.tsx
frontend/src/components/Documents/: DocumentList.tsx  UploadPanel.tsx
frontend/src/components/Settings/: SettingsPanel.tsx
frontend/src/components/Sources/: SourceCard.tsx
frontend/src/hooks/: useChat.ts
frontend/src/lib/: api.ts  types.ts
